- Semantic versioning


##[Unreleased -> 2.0.2]

## Changed 
 - Wait for JUnit 5.4.0 to implement test method ordering to write proper database tests.

## [2.0.1] 30.11.2018

### Fixed
- Update to UtilityCode 1.5.1 which excludes test ressources which got added accidentally due to mvn:clean not being executed before deployment

## [2.0.0] 29.11.2018

#### Note
	- Development of version 2.0.0 was a bit all over the place. Commits are out of order and the changelog wasn't accuratly tracked.
	Starting now a more tracable documentation and commit behaviour will be enforced.

### Fixed

- Breaking change
	- rename hemming to hamming distance
	- rename getElementsWithinHemmingDistance to getElementsWithinHammingDistance in binaryTree

- Bumped dependency of github.kilianB.UtilityCode to 1.5.0 utilizing the fix in getScaledImage instance which 
would fall back to the old jdk 1 awt implementation decreasing speed by a factor of 600. As well as supporting multiple image types

 - removed unnecessary computation of grayscale image in difference hash
 - difference hash now computes the padding byte correctly
 - Typo in hashing algorithm "bitResoluation" -> "bitResolution". Since this is a protected field
 which most likely is used in any derived hashing algorithm this is classified as a breaking change!
 - Due to a major version bump the dHash will be revisited and it's implementation
 might change to not waste one bit. This will lead to all created hashes so far to be invalidated. The algorithm id of dHash will be updated
 accordingly.

### Changed

- Update JUnit to 5.3.1
- The hashing algorithm was refactored and now has to implement a different method signature returning a big integer instead of a hash object. 
	In preparation to drop the no information 1 padding bit
- Starting with version 2 hashes now use Luminosity as given by YCrCb instead of interpolated grayscale values.